Changes to application UI

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,8 @@ config.py
 .MineP.env
 .vscode
 __pycache__
+config/launch.json
+config/launch.json
+tempCodeRunnerFile.py
+config/launch.json
+config/launch.json
