--- a/config/launch.json
+++ b/config/launch.json
@@ -12,8 +12,8 @@
             },
             "args": [
                 "run",
-                "--no-debugger",
-                "--no-reload"
+                //"--no-debugger",
+                //"--no-reload"
             ],
             "jinja": true,
             "autoStartBrowser": false
